@@ -33,7 +33,7 @@ done
 unset i j k l m tb6
 
 LICENSE="public-domain" # machine-generated tables
-SLOT="tb6"
+SLOT="nofetch"
 KEYWORDS="~amd64 ~x86"
 RESTRICT="fetch"
 
