@@ -1,6 +1,11 @@
 # ChangeLog for games-board/tablebase-syzygy
 # Copyright 1999-2017 Gentoo Foundation; Distributed under the GPL v2
 
+  09 Mar 2017; Ulrich Müller <ulm@gentoo.org>
+  tablebase-syzygy-0_pre20131213.ebuild,
+  tablebase-syzygy-0_pre20131213-r100.ebuild, metadata.xml:
+  Rename the tb6 use flag to 6-pieces.
+
 *tablebase-syzygy-0_pre20131213-r100 (09 Mar 2017)
 
   09 Mar 2017; Ulrich Müller <ulm@gentoo.org>
